update namespaces and version upgrade

--- a/YetAnotherTimeMod/manifest.json
+++ b/YetAnotherTimeMod/manifest.json
@@ -5,6 +5,6 @@
   "Description": "Manipulate game time.",
   "UniqueID": "NeverToxic.YetAnotherTimeMod",
   "EntryDll": "YetAnotherTimeMod.dll",
-  "MinimumApiVersion": "3.0.0",
+  "MinimumApiVersion": "4.0.0-alpha",
   "UpdateKeys": []
 }
