--- a/LittleHelpers/LittleHelpersCore/LittleHelpersCore.csproj
+++ b/LittleHelpers/LittleHelpersCore/LittleHelpersCore.csproj
@@ -16,6 +16,6 @@
         <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1" />
     </ItemGroup>
     
-    <Import Project="..\Common\Common.projitems" Label="Shared" />
+    <Import Project="..\..\Common\Common.projitems" Label="Shared" />
 
 </Project>
