--- a/LittleHelpers/LittleHelpersAssets/manifest.json
+++ b/LittleHelpers/LittleHelpersAssets/manifest.json
@@ -1,16 +1,16 @@
 {
-  "Name": "Farm Helpers",
+  "Name": "Little Helpers Assets",
   "Author": "NeverToxic",
   "Version": "0.0.1-alpha",
-  "Description": "Assets for the Farm Helpers mod.",
-  "UniqueID": "NeverToxic.FarmHelpersAssets",
+  "Description": "Assets for the Little Helpers mod.",
+  "UniqueID": "NeverToxic.LittleHelpersAssets",
   "UpdateKeys": [],
   "ContentPackFor": {
     "UniqueID": "Pathoschild.ContentPatcher"
   },
   "Dependencies": [
     {
-      "UniqueID": "NeverToxic.FarmHelpers",
+      "UniqueID": "NeverToxic.LittleHelpersCore",
       "MinimumVersion": "0.0.1-alpha",
       "IsRequired": false
     }
