--- a/LittleHelpers/LittleHelpersCore/manifest.json
+++ b/LittleHelpers/LittleHelpersCore/manifest.json
@@ -1,17 +1,17 @@
 {
-  "Name": "Farm Helpers",
+  "Name": "Little Helpers Core",
   "Author": "NeverToxic",
   "Version": "0.0.1-alpha",
   "Description": "Adds helpers to the farm that harvest, water and replant crops, gather foragables and more.",
-  "UniqueID": "NeverToxic.FarmHelpers",
-  "EntryDll": "FarmHelpers.dll",
+  "UniqueID": "NeverToxic.LittleHelpersCore",
+  "EntryDll": "LittleHelpersCore.dll",
   "MinimumApiVersion": "4.0.0-alpha",
   "UpdateKeys": [],
   "Dependencies": [
     {
-      "UniqueID": "NeverToxic.FarmHelpersAssets",
+      "UniqueID": "NeverToxic.LittleHelpersAssets",
       "MinimumVersion": "0.0.1-alpha",
-      "IsRequired":  true
+      "IsRequired": true
     }
   ]
 }
