small helper script

--- a/DutchLocalisation/manifest.json
+++ b/DutchLocalisation/manifest.json
@@ -1,8 +1,8 @@
 {
-  "Name": "Stardew Nederlands (Dutch Localisation)",
+  "Name": "Stardew Valley Nederlands (Dutch)",
   "Author": "NeverToxic",
   "Version": "0.0.1-alpha",
-  "Description": "Nederlandse vertalingen voor het spel (Dutch translations).",
+  "Description": "Nederlandse vertalingen voor het spel (Dutch localisation).",
   "UniqueID": "NeverToxic.DutchLocalisation",
   "UpdateKeys": [],
   "ContentPackFor": {
