--- a/YetAnotherFishingMod/manifest.json
+++ b/YetAnotherFishingMod/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "Yet Another Fishing Mod",
   "Author": "NeverToxic",
-  "Version": "1.0.2",
+  "Version": "1.0.3.alpha",
   "Description": "Automatically catch fish and treasure.",
   "UniqueID": "NeverToxic.YetAnotherFishingMod",
   "EntryDll": "YetAnotherFishingMod.dll",
