--- a/SelfServe/manifest.json
+++ b/SelfServe/manifest.json
@@ -7,6 +7,7 @@
   "EntryDll": "SelfServe.dll",
   "MinimumApiVersion": "4.0.0",
   "UpdateKeys": [
+    "Nexus:20985"
   ],
   "Dependencies": [
     {
