--- a/templates/SmapiTemplate/SmapiTemplate.csproj
+++ b/templates/SmapiTemplate/SmapiTemplate.csproj
@@ -1,3 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+    <PropertyGroup>
+        <EnableHarmony>true</EnableHarmony>
+    </PropertyGroup>
+    <Import Project="..\..\shared\Common\Common.projitems" Label="Shared" />
 </Project>
