--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" />
     <PackageVersion Include="Pathoschild.Stardew.ModBuildConfig" Version="4.4.0" />
+    <PackageVersion Include="Leclair.Stardew.ModManifestBuilder" Version="2.2.0"/>
     <!-- TODO: wait for https://github.com/Pathoschild/SMAPI-ModTranslationClassBuilder/issues/4 -->
     <PackageVersion Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.1.0" />
   </ItemGroup>
