make use of shared i18n folder, bug: include doesn't make it show inside the solution explorer as an additionalfile, though i18n class still finds it. TODO: include shared folder in the build directory

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -24,6 +24,8 @@
 
         <!-- temporarily use fork: https://github.com/Dunc4nNT/SMAPI-ModTranslationClassBuilder -->
         <ProjectReference Include="$(SolutionDir)\..\SMAPI-ModTranslationClassBuilder\ModTranslationClassBuilder\ModTranslationClassBuilder.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+
+        <AdditionalFiles Condition="$(UseCommonI18n) == 'true'" Include="$(SolutionDir)\shared\i18n\**" LinkBase="i18n\"/>
     </ItemGroup>
 
     <!-- temporarily use fork: https://github.com/Dunc4nNT/SMAPI-ModTranslationClassBuilder -->
