--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,6 +5,7 @@
         <!-- ModManifestBuilder -->
         <BaseManifest>new</BaseManifest>
         <ManifestWarningsAsErrors Condition="$(Configuration) == 'Release'">true</ManifestWarningsAsErrors>
+        <ManifestSchema>https://raw.githubusercontent.com/Dunc4nNT/SMAPI/6cb4e9b055f1ae900cf5a9e47019c9351d2e1a01/src/SMAPI.Web/wwwroot/schemas/manifest.json</ManifestSchema>
     </PropertyGroup>
 
     <!-- When we're not building a release -->
