--- a/templates/SmapiMod/SmapiMod.csproj
+++ b/templates/SmapiMod/SmapiMod.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <!-- Metadata -->
+        <Version>1.0.0-alpha</Version>
+    </PropertyGroup>
+
+    <PropertyGroup>
         <!--#if EnableI18n -->
         <EnableI18n>true</EnableI18n>
         <!--#endif -->
@@ -18,6 +23,7 @@
         <UniqueId>ModIdPlaceHolder</UniqueId>
         <MinimumApiVersion>MinimumApiVersionPlaceHolder</MinimumApiVersion>
         <MinimumGameVersion>MinimumGameVersionPlaceHolder</MinimumGameVersion>
+        <UpdateKeys>Nexus:???;CurseForge:???</UpdateKeys>
     </PropertyGroup>
 
     <ItemGroup>
