--- a/src/mods/SelfServe/SelfServe.csproj
+++ b/src/mods/SelfServe/SelfServe.csproj
@@ -1,5 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <!-- Metadata -->
+        <Version>1.0.1</Version>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <EnableI18n>true</EnableI18n>
         <EnableHarmony>true</EnableHarmony>
     </PropertyGroup>
+
+    <PropertyGroup>
+        <!-- Metadata for ModManifestBuilder -->
+        <Name>Self Serve</Name>
+        <Description>Shops don't close.</Description>
+        <UniqueId>NeverToxic.SelfServe</UniqueId>
+        <MinimumApiVersion>4.0.0</MinimumApiVersion>
+        <MinimumGameVersion>1.6.15</MinimumGameVersion>
+        <UpdateKeys>Nexus:20985;CurseForge:???</UpdateKeys>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <SMAPIDependency Include="spacechase0.GenericModConfigMenu" Version="1.12.0" Required="false"/>
+    </ItemGroup>
 </Project>
