--- a/src/mods/YetAnotherFishingMod/YetAnotherFishingMod.csproj
+++ b/src/mods/YetAnotherFishingMod/YetAnotherFishingMod.csproj
@@ -1,5 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <!-- Metadata -->
+        <Version>1.2.0</Version>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <EnableI18n>true</EnableI18n>
         <EnableHarmony>true</EnableHarmony>
     </PropertyGroup>
+
+    <PropertyGroup>
+        <!-- Metadata for ModManifestBuilder -->
+        <Name>Yet Another Fishing Mod</Name>
+        <Description>Automatically catch fish and treasure.</Description>
+        <UniqueId>NeverToxic.YetAnotherFishingMod</UniqueId>
+        <MinimumApiVersion>4.0.0</MinimumApiVersion>
+        <MinimumGameVersion>1.6.15</MinimumGameVersion>
+        <UpdateKeys>Nexus:20391;CurseForge:996759</UpdateKeys>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <SMAPIDependency Include="spacechase0.GenericModConfigMenu" Version="1.12.0" Required="false"/>
+    </ItemGroup>
 </Project>
