--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,7 +5,7 @@
         <Copyright>Copyright (c) Dunc4nNT</Copyright>
         <PackageLicenseExpression>MPL-2.0</PackageLicenseExpression>
         <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>git@github.com:Dunc4nNT/StardewMods.git</RepositoryUrl>
+        <RepositoryUrl>https://github.com/Dunc4nNT/StardewMods.git</RepositoryUrl>
 
         <!-- Build settings -->
         <TargetFramework>net6.0</TargetFramework>
