--- a/src/mods/LittleHelpers/LittleHelpersCore/manifest.json
+++ b/src/mods/LittleHelpers/LittleHelpersCore/manifest.json
@@ -9,9 +9,10 @@
   "UniqueID": "NeverToxic.LittleHelpers",
   "Name": "Little Helpers",
   "Author": "Dunc4nNT",
-  "Version": "1.0.0-alpha.Debug",
+  "Version": "1.0.0-alpha",
   "Description": "Adds helpers to the farm that harvest, water and replant crops, gather foragables and more.",
-  "MinimumApiVersion": "4.0.0",
+  "MinimumApiVersion": "4.2",
+  "MinimumGameVersion": "1.6.15",
   "EntryDll": "LittleHelpersCore.dll",
   "Dependencies": [
     {
