--- a/src/mods/YetAnotherFishingMod/manifest.json
+++ b/src/mods/YetAnotherFishingMod/manifest.json
@@ -9,9 +9,10 @@
   "UniqueID": "NeverToxic.YetAnotherFishingMod",
   "Name": "Yet Another Fishing Mod",
   "Author": "Dunc4nNT",
-  "Version": "1.2.0-Debug",
+  "Version": "1.2.0",
   "Description": "Automatically catch fish and treasure.",
-  "MinimumApiVersion": "4.0.0",
+  "MinimumApiVersion": "4.2",
+  "MinimumGameVersion": "1.6.15",
   "EntryDll": "YetAnotherFishingMod.dll",
   "Dependencies": [
     {
