--- a/src/mods/Directory.Build.targets
+++ b/src/mods/Directory.Build.targets
@@ -1,4 +1,20 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <!-- Alternative build path for distributed files -->
+    <PropertyGroup Condition="$(Configuration) == 'Release'">
+        <ModZipPath>$(SolutionDir)\dist\$(ProjectName)</ModZipPath>
+        <TempPath>$(SolutionDir)\_temp\$(ProjectName)</TempPath>
+    </PropertyGroup>
+
+    <!-- Don't create mod distributions for non-release builds. -->
+    <PropertyGroup Condition="$(Configuration) != 'Release' ">
+        <EnableModZip>false</EnableModZip>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <IncludeSharedI18nFiles Condition="$(EnableI18n) == 'true' And $(UseCommonI18n) == 'true' ">true</IncludeSharedI18nFiles>
+    </PropertyGroup>
+
+    <!-- Include standard files in output -->
     <ItemGroup>
         <Content Include="$(SolutionDir)\LICENSE">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -8,15 +24,32 @@
         </None>
     </ItemGroup>
 
-    <ItemGroup Condition="$(EnableI18n) == 'true' And $(UseCommonI18n) == 'true' ">
+    <!-- Include shared i18n files only if i18n is enabled and shared is used. -->
+    <ItemGroup Condition="$(IncludeSharedI18nFiles) == 'true'">
         <SharedI18nFiles Include="$(SharedI18nFolder)\**\*"/>
     </ItemGroup>
 
-    <Target Condition="$(EnableI18n) == 'true' And $(UseCommonI18n) == 'true' "
-            Name="CopySharedI18nFiles"
+    <!-- Ensure shared i18n files are included in the ModFolder.  -->
+    <Target Name="CopySharedI18nFiles"
+            Condition="$(IncludeSharedI18nFiles) == 'true'"
             AfterTargets="AfterBuild">
         <Copy SourceFiles="@(SharedI18nFiles)"
-              DestinationFolder="$(GameModsPath)\$(ModFolderName)\i18n\%(RecursiveDir)"
-        />
+              DestinationFolder="$(GameModsPath)\$(ModFolderName)\i18n\%(RecursiveDir)"/>
+    </Target>
+
+    <!-- Ensure shared i18n files are included in the distribution zip. -->
+    <Target Name="CreateModDistZip" Condition="$(EnableModZip) == 'true' " AfterTargets="AfterBuild">
+        <RemoveDir Directories="$(TempPath)" Condition="Exists('$(TempDir)')"/>
+        <MakeDir Directories="$(TempPath)"/>
+        <Unzip DestinationFolder="$(TempPath)"
+               SourceFiles="$(ModZipPath)\$(ProjectName) $(Version).zip"
+               OverwriteReadOnlyFiles="true"/>
+        <Copy SourceFiles="@(SharedI18nFiles)"
+              Condition="$(IncludeSharedI18nFiles) == 'true'"
+              DestinationFolder="$(TempPath)\$(ProjectName)\i18n\%(RecursiveDir)"/>
+        <ZipDirectory SourceDirectory="$(TempPath)"
+                      DestinationFile="$(ModZipPath)\$(ProjectName) $(Version).zip"
+                      Overwrite="true"/>
+        <RemoveDir Directories="$(TempPath)"/>
     </Target>
 </Project>
