--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,18 @@
 root = true
 
-[*.{csproj,props,targets}]
+[*]
 indent_style = space
-indent_size = 4
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.{csproj,props,targets}]
+indent_size = 4
 
 [*.{yml,json,md}]
-indent_style = space
 indent_size = 2
-insert_final_newline = true
 
 [*.cs]
 charset = utf-8
-indent_style = space
 indent_size = 4
 
 # Sort using and Import directives with System.* appearing first
