--- a/src/mods/NoStaminaWasted/NoStaminaWasted.csproj
+++ b/src/mods/NoStaminaWasted/NoStaminaWasted.csproj
@@ -7,6 +7,7 @@
     <PropertyGroup>
         <EnableI18n>true</EnableI18n>
         <EnableHarmony>true</EnableHarmony>
+        <UseCommonCode>true</UseCommonCode>
         <UseCommonI18n>true</UseCommonI18n>
     </PropertyGroup>
 
