--- a/src/mods/TelevisionFramework/TelevisionFramework.csproj
+++ b/src/mods/TelevisionFramework/TelevisionFramework.csproj
@@ -7,6 +7,7 @@
     <PropertyGroup>
         <EnableI18n>true</EnableI18n>
         <EnableHarmony>true</EnableHarmony>
+        <UseCommonCode>true</UseCommonCode>
     </PropertyGroup>
 
     <PropertyGroup>
