--- a/templates/Directory.Build.props
+++ b/templates/Directory.Build.props
@@ -1,3 +1,4 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Import Project="$(SolutionDir)\src\mods\Directory.Build.props"/>
+    <Import Project="$(SolutionDir)\src\mods\Directory.Build.targets"/>
 </Project>
